# Proyecto-Trivia

./: CMakeLists.txt  Jugador.cpp  Jugador.h  PreguntaOpcionMultiple.cpp  PreguntaOpcionMultiple.h  PreguntaVOF.cpp  PreguntaVOF.h  Trivia.cpp  Trivia.h  main.cpp  main.h  pregunta.cpp  pregunta.h
